codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__kimi_code_reasoning_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: reasoning_popup
---
  Select Reasoning Level for Kimi Code K3

› 1. Low              Low. Faster, lighter reasoning.
  2. High             High. Stronger reasoning with more latency.
  3. More reasoning…  Max consumes usage limits faster

  Press enter to confirm or esc to go back
