codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Access hidden models by running corbanu -m <model_name> or in your config.to

› 1. z-ai/glm-5.2 (current)  z-ai/glm-5.2 description

  Press enter to confirm or esc to go back
