codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3366
expression: popup
---
  Select Model and Effort
  Ambient coding plan

  OpenAI  [Ambient]  Corbanu API  Kimi Code  Z.AI  DeepSeek  Claude Plan
  Anthropic  Meta  Vercel  Baseten  OpenRouter

› 1. Ambient GLM 5.2 (current)  Model: z-ai/glm-5.2. Ambient: GLM 5.2 - $0.76/
                                M input, $0.14/M cached input, $2.42/M output.

  Use Left/Right to switch providers. Press Enter to confirm or Esc to go back
