codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup_openrouter_provider.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  OpenRouter API key

  OpenAI  Ambient  Corbanu API  Kimi Code  Z.AI  DeepSeek  Claude Plan  Anthropic  Meta  Vercel  Baseten  [OpenRouter]

› 1. OpenRouter Grok 4.7 (current)     Model: x-ai/grok-4.7. OpenRouter: Grok 4.7 — $1.60/M input, $4.8/M output. Rates double
                                       above 200K prompt tokens.
  2. OpenRouter DeepSeek V4.1 Flash    Model: deepseek/deepseek-v4.1-flash. OpenRouter: DeepSeek V4.1 Flash — $0.15/M input,
                                       $0.6/M output. Provider/time-of-day rates vary; peak prices are higher.
  3. OpenRouter MiMo V2.6 Pro          Model: xiaomi/mimo-v2.6-pro. OpenRouter: Xiaomi MiMo V2.6 Pro — $0.435/M input, $0.87/M
                                       output. Provider/time-of-day rates vary; peak prices are higher.
  4. OpenRouter GLM 5.3 Flash          Model: z-ai/glm-5.3-flash. OpenRouter: GLM 5.3 Flash — $0.15/M input, $0.5/M output.
  5. OpenRouter Nemotron 3 Ultra Free  Model: nvidia/nemotron-3-ultra-550b-a55b:free. OpenRouter: Nemotron 3 Ultra Free — $0/M
                                       input, $0/M output. Free endpoint; rate limits and provider data-use terms apply.
  6. OpenRouter MiniMax M3             Model: minimax/minimax-m3. OpenRouter: MiniMax M3 - $0.60/M input, $2.40/M output.
  7. OpenRouter Gemini 3.5 Flash       Model: google/gemini-3.5-flash. OpenRouter: Gemini 3.5 Flash - $1.50/M input, $9.00/M
                                       output.
  8. OpenRouter Tencent Hy3 Free       Model: tencent/hy3:free. OpenRouter: Tencent Hy3 Free - $0/M input, $0/M output.

  Use Left/Right to switch providers. Press Enter to confirm or Esc to go back
