codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__openai_api_key_env_fallback_notice.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: "lines_to_single_string(&cells[0])"
---
⚠ Using OPENAI_API_KEY from your environment — billed per use to that API key.
  Sign in or unset it to change.
