codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_marketplace_remove_confirmation.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: confirmation
---
  Plugins
  Remove Repo Marketplace marketplace?
  This removes the configured marketplace from Corbanu Terminal.

  Remove marketplace  Remove this marketplace from the available plugin list.
› Back to plugins     Keep this marketplace installed.

  enter select · esc close
